--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,26 @@ body {
   letter-spacing: 1px;
 }
 
+/* Nav Bar Style */
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 2px solid rgb(99, 99, 99);
+  padding: 5px 15px;
+}
+
+.nav-items {
+  display: flex;
+  list-style: none;
+}
+
+.nav-link {
+  text-decoration: none;
+}
+
+
 h1,
 h2 {
   font-weight: normal;
@@ -13,12 +33,6 @@ h2 {
   width: 50%;
   max-width: 960px;
   margin: 20px auto;
-}
-
-.title {
-  width: 100%;
-  text-align: center;
-  margin: 10px 0;
 }
 
 #book-list {
@@ -96,4 +110,27 @@ h2 {
   margin: 10px 0;
   border-left: 0;
   color: white;
+}
+
+footer {
+  max-width: 960px;
+  margin: 20px auto;
+  border:2px solid rgb(99, 99, 99);
+  padding: 5px 15px;
+}
+
+h3 span {
+  font-weight: 500;
+  font-size: 16px;
+  font-style: italic;
+}
+
+.contact-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hide {
+  display: none;
 }
